[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/aseprites/Cl-floating.png" type="Texture" id=1]
[ext_resource path="res://element.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 4 ), SubResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "floating",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 9.0

[node name="Cl" type="Area2D" groups=["Cl"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "floating"
frame = 1
playing = true
__meta__ = {
"_editor_description_": "YXNlcHJpdGVfd2l6YXJkX2NvbmZpZwpzb3VyY2V8PUM6L1N5c3RlbS9Fc2NvbGEvSUZGQVIvM8K6L3F1aW1pY2EvQ2wtZmxvYXRpbmcuYXNlcHJpdGUKbGF5ZXJ8PUxheWVyIDEKb3BfZXhwfD1UcnVlCm9fZm9sZGVyfD1yZXM6Ly9hc3NldHMvYXNlcHJpdGVzCm9fbmFtZXw9Q2wtZmxvYXRpbmcKb25seV92aXNpYmxlfD1GYWxzZQpvX2V4X3B8PQo="
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 7 )

[connection signal="body_entered" from="." to="." method="_on_Cl_body_entered"]
